[package]
name = "postcss_value_parser"
version = "0.0.1"
description = "Transforms css values into the tree"
authors = ["the postcss-rs authors"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/postcss-rs/postcss-rs-value-parser"
license = "MIT"
keywords = ["css", "syntax", "postcss", "parser", "ast"]

[dependencies]
memchr = "2.4"
once_cell = "1.8.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pretty_assertions = "1"

[lib]
# `cargo bench` Gives "Unrecognized Option" Errors for Valid Command-line Options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
lto = true
panic = "abort"
debug = true
